--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/django"]
 	path = src/django
 	url = git://github.com/django/django@28a4d039a
+[submodule "src/south"]
+	path = src/south
+	url = git://github.com/dmishe/django-south.git
